@@ -378,6 +378,26 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|response
+operator|.
+name|transform
+operator|.
+name|DocTransformer
+import|;
+end_import
+
+begin_comment
+comment|// jdocs
+end_comment
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|util
 operator|.
 name|RandomizeSSL
@@ -589,8 +609,6 @@ name|asList
 argument_list|(
 comment|// TODO: SOLR-9314: add more of these for other various transformers
 comment|//
-comment|// TODO: add a [docid] validator (blocked by SOLR-9288& SOLR-9289)
-comment|//
 operator|new
 name|GlobValidator
 argument_list|(
@@ -734,6 +752,27 @@ literal|"ddd_s"
 argument_list|,
 literal|"my_str_field_alias"
 argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// SOLR-9289...
+name|FL_VALIDATORS
+operator|.
+name|add
+argument_list|(
+operator|new
+name|DocIdValidator
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|FL_VALIDATORS
+operator|.
+name|add
+argument_list|(
+operator|new
+name|DocIdValidator
+argument_list|(
+literal|"my_docid_alias"
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -2380,7 +2419,7 @@ literal|330
 argument_list|)
 expr_stmt|;
 block|}
-comment|/**     * abstraction for diff types of things that can be added to an 'fl' param that can validate    * the results are correct compared to an expected SolrInputDocument    */
+comment|/**     * Abstraction for diff types of things that can be added to an 'fl' param that can validate    * the results are correct compared to an expected SolrInputDocument    */
 DECL|interface|FlValidator
 specifier|private
 interface|interface
@@ -2456,6 +2495,18 @@ name|fls
 argument_list|)
 argument_list|)
 expr_stmt|;
+block|}
+comment|/**      * Indicates if this validator is for a transformer that returns true from       * {@link DocTransformer#needsSolrIndexSearcher}.  Other validators for transformers that       * do<em>not</em> require a re-opened searcher (but may have slightly diff behavior depending       * on wether a doc comesfrom the index or from the update log) may use this information to       * decide wether they wish to enforce stricter assertions on the resulting document.      *      * The default implementation always returns<code>false</code>      *      * @see DocIdValidator      */
+DECL|method|requiresRealtimeSearcherReOpen
+specifier|public
+specifier|default
+name|boolean
+name|requiresRealtimeSearcherReOpen
+parameter_list|()
+block|{
+return|return
+literal|false
+return|;
 block|}
 comment|/**       * Must return a non null String that can be used in an fl param -- either by itself,       * or with other items separated by commas      */
 DECL|method|getFlParam
@@ -2695,6 +2746,191 @@ name|expectedFieldName
 return|;
 block|}
 block|}
+comment|/**     * enforces that a valid<code>[docid]</code> is present in the response, possibly using a     * resultKey alias.  By default the only validation of docId values is that they are an integer     * greater than or equal to<code>-1</code> -- but if any other validator in use returns true     * from {@link #requiresRealtimeSearcherReOpen} then the constraint is tightened and values must     * be greater than or equal to<code>0</code>     */
+DECL|class|DocIdValidator
+specifier|private
+specifier|static
+class|class
+name|DocIdValidator
+implements|implements
+name|FlValidator
+block|{
+DECL|field|resultKey
+specifier|private
+specifier|final
+name|String
+name|resultKey
+decl_stmt|;
+DECL|method|DocIdValidator
+specifier|public
+name|DocIdValidator
+parameter_list|(
+specifier|final
+name|String
+name|resultKey
+parameter_list|)
+block|{
+name|this
+operator|.
+name|resultKey
+operator|=
+name|resultKey
+expr_stmt|;
+block|}
+DECL|method|DocIdValidator
+specifier|public
+name|DocIdValidator
+parameter_list|()
+block|{
+name|this
+argument_list|(
+literal|"[docid]"
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|getFlParam
+specifier|public
+name|String
+name|getFlParam
+parameter_list|()
+block|{
+return|return
+literal|"[docid]"
+operator|.
+name|equals
+argument_list|(
+name|resultKey
+argument_list|)
+condition|?
+name|resultKey
+else|:
+name|resultKey
+operator|+
+literal|":[docid]"
+return|;
+block|}
+DECL|method|assertRTGResults
+specifier|public
+name|Collection
+argument_list|<
+name|String
+argument_list|>
+name|assertRTGResults
+parameter_list|(
+specifier|final
+name|Collection
+argument_list|<
+name|FlValidator
+argument_list|>
+name|validators
+parameter_list|,
+specifier|final
+name|SolrInputDocument
+name|expected
+parameter_list|,
+specifier|final
+name|SolrDocument
+name|actual
+parameter_list|)
+block|{
+specifier|final
+name|Object
+name|value
+init|=
+name|actual
+operator|.
+name|getFirstValue
+argument_list|(
+name|resultKey
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|getFlParam
+argument_list|()
+operator|+
+literal|" => no value in actual doc"
+argument_list|,
+name|value
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"[docid] must be an Integer: "
+operator|+
+name|value
+argument_list|,
+name|value
+operator|instanceof
+name|Integer
+argument_list|)
+expr_stmt|;
+name|int
+name|minValidDocId
+init|=
+operator|-
+literal|1
+decl_stmt|;
+comment|// if it comes from update log
+for|for
+control|(
+name|FlValidator
+name|other
+range|:
+name|validators
+control|)
+block|{
+if|if
+condition|(
+name|other
+operator|.
+name|requiresRealtimeSearcherReOpen
+argument_list|()
+condition|)
+block|{
+name|minValidDocId
+operator|=
+literal|0
+expr_stmt|;
+break|break;
+block|}
+block|}
+name|assertTrue
+argument_list|(
+literal|"[docid] must be>= "
+operator|+
+name|minValidDocId
+operator|+
+literal|": "
+operator|+
+name|value
+argument_list|,
+name|minValidDocId
+operator|<=
+operator|(
+operator|(
+name|Integer
+operator|)
+name|value
+operator|)
+operator|.
+name|intValue
+argument_list|()
+argument_list|)
+expr_stmt|;
+return|return
+name|Collections
+operator|.
+expr|<
+name|String
+operator|>
+name|singleton
+argument_list|(
+name|resultKey
+argument_list|)
+return|;
+block|}
+block|}
 comment|/** Trivial validator of a ValueSourceAugmenter */
 DECL|class|FunctionValidator
 specifier|private
@@ -2834,6 +3070,17 @@ name|fieldName
 operator|=
 name|fieldName
 expr_stmt|;
+block|}
+comment|/** always returns true */
+DECL|method|requiresRealtimeSearcherReOpen
+specifier|public
+name|boolean
+name|requiresRealtimeSearcherReOpen
+parameter_list|()
+block|{
+return|return
+literal|true
+return|;
 block|}
 DECL|method|getFlParam
 specifier|public
